# LakeShark

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.headless
audio/: audio_out.c
components/apps/: CMakeLists.txt  apps.h
components/apps/adsb_gui/: AppADSB.cpp  AppADSB.hpp
components/apps/adsb_gui/assets/: img_app_adsb.c
components/apps/control_panel/: ControlPanel.cpp  ControlPanel.hpp
components/apps/control_panel/assets/: img_app_control_panel.c
components/apps/file_browser/: FileBrowser.cpp  FileBrowser.hpp
components/apps/file_browser/assets/: img_app_file_browser.c
components/apps/fm_gui/: AppFM.cpp  AppFM.hpp
components/apps/mesh/: MeshController.cpp  MeshController.hpp
components/apps/mesh/assets/: img_app_mesh.c
components/apps/music_player/: MusicPlayer.cpp
components/apps/music_player/assets/: img_app_music_player.c
components/apps/music_player/gui_music/: lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_list.h  lv_demo_music_main.c  lv_demo_music_main.h
components/apps/music_player/gui_music/assets/: img_lv_demo_music_btn_corner_large.c  img_lv_demo_music_btn_list_pause.c  img_lv_demo_music_btn_list_pause_large.c  img_lv_demo_music_btn_list_play.c  img_lv_demo_music_btn_list_play_large.c  img_lv_demo_music_btn_loop.c  img_lv_demo_music_btn_loop_large.c  img_lv_demo_music_btn_next.c  img_lv_demo_music_btn_next_large.c  img_lv_demo_music_btn_pause.c  img_lv_demo_music_btn_pause_large.c  img_lv_demo_music_btn_play.c  img_lv_demo_music_btn_play_large.c  img_lv_demo_music_btn_prev.c  img_lv_demo_music_btn_prev_large.c  img_lv_demo_music_btn_rnd.c  img_lv_demo_music_btn_rnd_large.c  img_lv_demo_music_corner_left.c  img_lv_demo_music_corner_left_large.c  img_lv_demo_music_corner_right.c  img_lv_demo_music_corner_right_large.c  img_lv_demo_music_cover_1.c  img_lv_demo_music_cover_2.c  img_lv_demo_music_cover_3.c  img_lv_demo_music_icon_1.c  img_lv_demo_music_icon_1_large.c  img_lv_demo_music_icon_2.c  img_lv_demo_music_icon_2_large.c  img_lv_demo_music_icon_3.c  img_lv_demo_music_icon_3_large.c  img_lv_demo_music_icon_4.c  img_lv_demo_music_icon_4_large.c  img_lv_demo_music_list_border.c  img_lv_demo_music_list_border_large.c  img_lv_demo_music_logo.c  img_lv_demo_music_slider_knob.c  img_lv_demo_music_slider_knob_large.c  img_lv_demo_music_wave_bottom.c  img_lv_demo_music_wave_bottom_large.c  img_lv_demo_music_wave_top.c  (+1 more)
components/apps/p25_gui/: AppP25.cpp  AppP25.hpp
components/apps/p25_gui/assets/: img_app_p25.c
components/apps/sdr_ui/: lv_font_consolas_14.c  lv_font_consolas_16.c  sdr_ui.cpp  sdr_ui.h
components/apps/setting/: Setting.cpp  Setting.hpp
components/apps/setting/assets/: img_app_setting.c  img_wifi_connect_fail.c  img_wifi_connect_success.c
components/apps/setting/ui/: ui.c  ui.h
components/apps/setting/ui/images/: img_wifi_lock.c  img_wifisignal_absent.c  img_wifisignal_good.c  img_wifisignal_moderate.c  img_wifisignal_wake.c  ui_img_482951309.c  ui_img_about_png.c  ui_img_arrow_png.c  ui_img_bluetooth_png.c  ui_img_light_png.c  ui_img_return_png.c  ui_img_sound_png.c  ui_img_wifi_png.c
components/apps/setting/ui/screens/: ui_ScreenSettingAbout.c  ui_ScreenSettingBLE.c  ui_ScreenSettingLight.c  ui_ScreenSettingMain.c  ui_ScreenSettingVerification.c  ui_ScreenSettingVolume.c  ui_ScreenSettingWiFi.c
components/apps/settings/: AppSettings.cpp  AppSettings.hpp
components/apps/shell/: ls_app.hpp  ls_icons.cpp  ls_icons.h  ls_shell.cpp  ls_shell.hpp
components/apps/terminal/: Terminal.cpp  Terminal.hpp
components/apps/terminal/assets/: img_app_terminal.c
components/imbe_vocoder/: CMakeLists.txt  imbe_shim.cpp  imbe_shim.h
components/lakeshark/: CMakeLists.txt  lakeshark_backend.c  lakeshark_backend.h
components/lakeshark/apps/adsb/: adsb_decode.c  adsb_decode.h  adsb_state.c  adsb_state.h  app_adsb.c  demod1090.c  demod1090.h  mode-s.c  mode-s.h
components/lakeshark/apps/fm/: app_fm.c  fm_app.h  fm_dsp.c  fm_dsp.h  fm_state.h  pocsag.c  pocsag.h
components/lakeshark/apps/p25/: Golay24.hpp  Hamming.cpp  Hamming.hpp  ReedSolomon.hpp  app_p25.c  cqpsk_demod.c  cqpsk_demod.h  diag.c  diag.h  dsd.h  dsd_dibit.c  dsd_filters.c  dsd_frame.c  dsd_frame_sync.c  dsd_main.c  dsd_symbol.c  dsp_pipeline.c  dsp_pipeline.h  p25_lcw.c  p25_qual.c  p25_qual.h  p25_state.h  p25p1_check_hdu.cpp  p25p1_check_hdu.h  p25p1_check_ldu.cpp  p25p1_check_ldu.h  p25p1_check_nid.c  p25p1_check_nid.h  p25p1_const.h  p25p1_hdu.c  p25p1_hdu.h  p25p1_heuristics.c  p25p1_heuristics.h  p25p1_ldu.c  p25p1_ldu.h  p25p1_ldu1.c  p25p1_ldu2.c  p25p1_tdu.c  p25p1_tdulc.c  scanner.c  (+1 more)
components/lakeshark/audio/: audio_events.c  audio_events.h  audio_out.c  audio_out.h  plane_audio.c  plane_audio.h  sam_tts.c  sam_tts.h  tone.c  tone.h
components/lakeshark/audio/sam/: ReciterTabs.h  RenderTabs.h  SAM_LICENSE.md  SamTabs.h  createtransitions.c  debug.c  debug.h  processframes.c  reciter.c  reciter.h  render.c  render.h  sam.c  sam.h
components/lakeshark/core/: app_registry.c  app_registry.h  display_ctl.c  display_ctl.h  event_bus.c  event_bus.h  ls_ctl.c  ls_ctl.h  perf.c  perf.h  scan_channels.c  scan_channels.h  scan_engine.c  scan_engine.h  settings.c  settings.h
components/lakeshark/output/: event_stream.c  event_stream.h
components/lakeshark/radio/: esp_libusb.c  esp_libusb.h  librtlsdr.c  reg_field.h  rtl-sdr.h  rtl-sdr_export.h  rtlsdr_dev.c  rtlsdr_dev.h  rtlsdr_i2c.h  stream.c  stream.h  tuner_e4k.c  tuner_e4k.h  tuner_fc0012.c  tuner_fc0012.h  tuner_fc0013.c  tuner_fc0013.h  tuner_fc2580.c  tuner_fc2580.h  tuner_r82xx.c  tuner_r82xx.h  usb_host.c  usb_host.h
components/loramesher/: CMakeLists.txt
components/loramesher/src/hardware/radiolib/radiolib_modules/: sx1262.cpp
core/: app_main.c
host/: W95FA-FONT-LICENSE.txt  lakeshark_gui.py
main/: CMakeLists.txt  Kconfig.projbuild  boot_splash.cpp  boot_splash.h  bsod.c  bsod.h  headless_main.c  idf_component.yml  main.cpp
main/dark/: core_data.h
output/: diag_emit.c  diag_emit.h  diag_json.c  diag_json.h  diag_kv.c  diag_kv.h  (+5 more)
(+30 files in other folders)
